--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -18,3 +18,10 @@
 .m20{
   margin-top: 20px;
 }
+
+body{
+  font-size: 16px;
+}
+.nav li a{
+  font-size: 20px;
+}
